# mate-rov-2023

./: .gitignore  Cargo.toml  README.md  deploy.sh  detect_cameras.sh  setup_camera.sh  surface.sh  todo.md
.cargo/: config.toml
common/: Cargo.toml
common/src/: error.rs  handler.rs  kvdata.rs  lib.rs  network.rs  protocol.rs  robot_bound.rs  state.rs  store.rs  surface_bound.rs  types.rs
common/src/store/: adapters.rs  tokens.rs
controller/: Cargo.toml
net/: Cargo.toml
net/src/: client.rs  data.rs  lib.rs  net.rs  server.rs
net/src/io/: client.rs  data.rs  mod.rs  net.rs  server.rs
net/src/packets/: r2c.rs
networking/: Cargo.toml
networking/examples/: networking.rs
networking/src/: acceptor.rs  buf.rs  error.rs  lib.rs  peer.rs  worker.rs
packets/: Cargo.toml
packets/src/: c2r.rs  lib.rs
robot/: Cargo.toml  build.rs  forward_motor_data.csv  reverse_motor_data.csv
robot/.cargo/: config.toml
robot/examples/: motor.rs
robot/src/: event.rs  events.rs  lib.rs  main.rs  movement.rs  network.rs  peripheral.rs  peripheral_new.rs  robot.rs  systems.rs
robot/src/peripheral/: depth.rs  devices.rs  icm20602.rs  imu.rs  lis3mdl.rs  lsm6dsl.rs  motor.rs  ms5937.rs  neopixel.rs  pca9685.rs  spi.rs
robot/src/peripheral_new/: icm20602.rs  motor.rs  neopixel.rs  pca9685.rs
robot/src/peripheral_old/: imu.rs  lis3mdl.rs  lsm6dsl.rs
robot/src/systems/: cameras.rs  depth.rs  depth_control.rs  error.rs  hw_stat.rs  indicators.rs  inertial.rs  leak.rs  leveling.rs  logging.rs  motor.rs  networking.rs  orientation.rs  robot.rs  status.rs  stop.rs
runner-rpi/: Cargo.toml
runner-rpi/src/: main.rs
surface/: Cargo.toml
surface/examples/: gamepad_test.rs
surface/src/: events.rs  main.rs  plugins.rs
surface/src/plugins/: error.rs  gamepad.rs  movement.rs  networking.rs  notification.rs  opencv.rs  orientation.rs  robot.rs  ui.rs  video.rs
surface/src/plugins/opencv/: camera.rs  pipeline.rs
surface/src/plugins/ui/: components.rs  elements.rs  panes.rs  widgets.rs  windows.rs
surface/src/plugins/video/: camera.rs  pipeline.rs
