[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"
anyhow = "1"
glam = { version =  "0.21.3", features = ["serde"] }
bitflags = "1"
message-io = "0.14"
tracing = "0.1"
