[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"
anyhow = "1"
nalgebra = { version = "0.31", features = ["serde-serialize"] }
bitflags = "1"
tracing = "0.1"
networking = { path = "../networking" }
fxhash = "0.2"

