[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc.1"

mio = { version = "0.8", features = ["os-poll", "net"] }
flate2 = "1.0"

anyhow = { version = "1", features = ["backtrace"] }

crossbeam = "0.8"
