[package]
name = "robot"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
networking = { path = "../networking" }

tracing = "0.1"
tracing-subscriber = "0.3"

rppal = "0.14"
smart-leds = "0.3"
ws2812-spi = "0.4"

sysinfo = { version = "0.28", default-features = false }

anyhow = "1"
serde = { version = "1", features = ["derive"]}
crossbeam = "0.8"
bitflags = "1"
paste = "1.0"
fxhash = "0.2"
