[package]
name = "surface"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
crossbeam = "0.8"
message-io = "0.14"
common = { path = "../common" }
networking = { path = "../networking" }
serde = { version = "1", features = ["derive"]}

tracing = "0.1"
tracing-subscriber = "0.3"

bevy = { version = "0.8", features = ["wayland"] }
egui = "0.19"
egui_extras = "0.19"
bevy_egui = { version = "0.16", default-features = false }
