[package]
name = "surface"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
crossbeam = "0.8"
common = { path = "../common" }
networking = { path = "../networking" }
serde = { version = "1", features = ["derive"]}
fxhash = "0.2"
rand = "0.8"

tracing = "0.1"
tracing-subscriber = "0.3"

bevy = { version = "0.10", default-features = false, features = ["wayland", "bevy_pbr", "bevy_core_pipeline", "bevy_gilrs", "bevy_gltf", "bevy_scene"] }
egui = "0.21"
egui_extras = "0.21"
bevy_egui = { version = "0.20", default-features = false }

nalgebra = "0.31"

opencv = "0.78"
